# devpod-python

./: .dockerignore  .gitattributes  DEVCONTAINER.md  Dockerfile.example  README.md  docker-compose.example.yml
.devcontainer/: devcontainer.json  post-create.sh
dev/: Makefile  docker-compose.example.yml  example.py  pyproject.toml
